--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -7,12 +7,13 @@ page-home {
   ion-card {
     position: relative;
     text-align: center;
+    cursor: pointer;
   }
 
   .card-title {
     position: absolute;
-    top: 82%;
-    font-size: 2.0em;
+    top: 85%;
+    font-size: 1.5em;
     width: 100%;
     font-weight: bold;
     color: #000;
